--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,8 @@
 body
 {
-    background-color: #fff8dc;
+    background-color: seashell;
+    font-family: "segoe ui";
     margin: 0;
-}
-
-header
-{
-    margin-top: -120px;
-    margin-bottom: -140px;
 }
 
 a
@@ -18,12 +13,20 @@ a
     text-decoration: none;
 }
 
+.navbar 
+{ margin: 0; padding: 0; width: 100%; min-height: 50px; display: flex; flex-direction: row; justify-content: space-between;}
+
+.logo {float:left; height: 20px; padding: 30px 0 0 40px; font-size: 20px; font-weight: bold;}
+
+.link {float:right; color: palevioletred; height: 20px; padding: 30px 40px; font-size:18px; font-weight: bold; }
+
 .site-header
 { 
-    height: 100vh;
+    height: 50vh;
 
     font-family: monospace;
-    color: #a59980;
+    color: rgb(82,82,82);
+    text-align: center;
 
     display: flex;  /* to position items on the screen */
     flex-direction: column;
@@ -46,18 +49,18 @@ a
 }
 
 
-.container {width:90%; margin:auto; overflow:hidden;}
+.container {width:90%; margin:auto; overflow:hidden; padding: 20px;}
 
 .items {width:30%; display: block; padding: 4px; margin-bottom: 20px; line-height: 1.42857143; background-color: #fff; border: 1px solid #ddd; border-radius: 4px; float:left; margin-left:1%;}
 
 .thumbnail {display: block; max-width: 100%; height: auto;}
 
-.caption {color: #a59980; padding:0px 10px 10px; font-weight: bold; text-align: center;}
+.caption {color: palevioletred; padding:0px 10px 10px; font-weight: bold; text-align: center;}
 
 
 footer
 {
-    background-color: #a59980;
+    background-color: pink;
     text-align: center;
     padding: 10px;
     margin-top: 30px;
